latest version before 3 user types
